--- a/Project_A/Project_A/Project_A.csproj
+++ b/Project_A/Project_A/Project_A.csproj
@@ -24,9 +24,10 @@
 
   <ItemGroup>
     <Folder Include="Areas\Admin\Controllers\" />
-    <Folder Include="Areas\Admin\Views\" />
     <Folder Include="Areas\Customer\Controllers\" />
     <Folder Include="Controllers\" />
+    <Folder Include="Controllers\" />
+    <Folder Include="wwwroot\images\" />
   </ItemGroup>
 
 </Project>
